from typing import Iterator, Protocol


class Storage(Protocol):
    def put_bytes(self, key: str, data: bytes, content_type: str) -> str: ...

    def put_text(self, key: str, text: str) -> str: ...

    def put_json(self, key: str, payload: dict) -> str: ...

    def get_bytes(self, key: str) -> bytes | None: ...

    def exists(self, key: str) -> bool: ...

    def list_keys(self, prefix: str) -> Iterator[str]: ...
